--- a/nginx.conf
+++ b/nginx.conf
@@ -18,120 +18,92 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
 
-    upstream node_app{
-	server 127.0.0.1:8080;
-	server 127.0.0.1:8081 weight=3;
-    }
-    server{
-	listen		80;
-	server_name	mginx_node;
-	root		/Users/emmanuel.gomez/Documents/proyecto-web/desafio_cluster/views;	
-	
-	    location /api/randoms/ {
-		    proxy_pass http://node_app;
-	    }
-    }
-    
-}
-
-
-	
-
     #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
     #                  '$status $body_bytes_sent "$http_referer" '
     #                  '"$http_user_agent" "$http_x_forwarded_for"';
 
     #access_log  logs/access.log  main;
 
-    #sendfile        on;
+    sendfile        on;
     #tcp_nopush     on;
 
     #keepalive_timeout  0;
-    #keepalive_timeout  65;
+    keepalive_timeout  65;
 
     #gzip  on;
 
-    #server {
-        #listen       8080;
-        #server_name  localhost;
+    upstream node_app{
+	server 127.0.0.1:8080;
+	server 127.0.0.1:8081 weight=3;
+    #server 127.0.0.1:8082 weight=4;
+    #server 127.0.0.1:8083 weight=4;
+    #server 127.0.0.1:8084 weight=4;
+    }
 
-        #charset koi8-r;
-
-        #access_log  logs/host.access.log  main;
-
-        #location / {
-            #root   html;
-            #index  index.html index.htm;
-        #}
-
-        #error_page  404              /404.html;
-
-        # redirect server error pages to the static page /50x.html
-        #
-        #error_page   500 502 503 504  /50x.html;
-        #location = /50x.html {
-            #root   html;
-        #}
-
-        # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-        #
-        #location ~ \.php$ {
-        #    proxy_pass   http://127.0.0.1;
-        #}
-
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        #
-        #location ~ \.php$ {
-        #    root           html;
-        #    fastcgi_pass   127.0.0.1:9000;
-        #    fastcgi_index  index.php;
-        #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-        #    include        fastcgi_params;
-        #}
-
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's one
-        #
-        #location ~ /\.ht {
-        #    deny  all;
-        #}
-    #}
+    server {
+        	listen		80;
+	        server_name	mginx_node;
+	        root		C:/Users/gomez/Desktop/servidor-con-balance-de-carga/views/;	
 
 
-    # another virtual host using mix of IP-, name-, and port-based configuration
-    #
-    #server {
-    #    listen       8000;
-    #    listen       somename:8080;
-    #    server_name  somename  alias  another.alias;
-
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
 
 
-    # HTTPS server
-    #
-    #server {
-    #    listen       443 ssl;
-    #    server_name  localhost;
 
-    #    ssl_certificate      cert.pem;
-    #    ssl_certificate_key  cert.key;
+        location /login/ {
+		    proxy_pass http://127.0.0.1:8080;
+	    }
 
-    #    ssl_session_cache    shared:SSL:1m;
-    #    ssl_session_timeout  5m;
+        location /registro {
+		    proxy_pass http://127.0.0.1:8080;
+	    }
 
-    #    ssl_ciphers  HIGH:!aNULL:!MD5;
-    #    ssl_prefer_server_ciphers  on;
+        location /chat {
+		    proxy_pass http://127.0.0.1:8080;
+	    }
 
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
-    #include servers/*;
-#}
+        location /api/productos-test {
+		    proxy_pass http://127.0.0.1:8080;
+	    }
 
+
+        location /logout {
+		    proxy_pass http://127.0.0.1:8080;
+	    }
+
+        location /failregistro {
+		    proxy_pass http://127.0.0.1:8080;
+	    }
+
+        location /faillogin {
+		    proxy_pass http://127.0.0.1:8080;
+	    }
+
+        location /info {
+		    proxy_pass http://127.0.0.1:8080;
+	    }
+
+        location /api/randoms/ {
+		    proxy_pass http://127.0.0.1:8081;
+	    }
+
+        #location /api/randoms/ {
+		    #proxy_pass http://127.0.0.1:8082;
+	    #}
+
+        #location /api/randoms/ {
+		    #proxy_pass http://127.0.0.1:8083;
+	    #}
+
+        #location /api/randoms/ {
+		    #proxy_pass http://127.0.0.1:8084;
+	    #}
+
+
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   html;
+        }
+
+
+
+}
